--- a/packages/gnosis/package.json
+++ b/packages/gnosis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web3-onboard/gnosis",
-  "version": "2.0.1-alpha",
+  "version": "2.0.1-alpha.1",
   "description": "Gnosis module for web3-onboard",
   "module": "dist/index.js",
   "browser": "dist/index.js",
